# enumeraite

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/: CONFIGURATION.md  QUICKSTART.md
docs/plans/: 2026-01-22-seed-path-generator-design.md  2026-01-22-seed-path-generator.md
examples/: sample_config.json  sample_paths.txt  setup.sh  usage_example.py
src/enumeraite/cli/: commands.py  main.py  ui.py
src/enumeraite/core/: config.py  engine.py  factory.py  models.py  provider.py  validator.py
src/enumeraite/providers/: claude_provider.py  openai_provider.py
tests/: __init__.py
tests/cli/: test_commands.py
tests/core/: test_config.py  test_engine.py  test_factory.py  test_provider.py  test_validator.py
tests/integration/: __init__.py  test_cli_integration.py
tests/providers/: test_claude_provider.py  test_openai_provider.py
