[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "enumeraite"
version = "0.1.0"
description = "AI-Assisted Web Attack Surface Enumeration"
authors = [{name = "Özgün Kültekin", email = "ozgun@enumeraite.com"}]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "click>=8.0.0",
    "aiohttp>=3.8.0",
    "pydantic>=2.0.0",
    "openai>=1.0.0",
    "anthropic>=0.7.0",
]

[project.scripts]
enumeraite = "enumeraite.cli.main:cli"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]